[OS X] Compilation Issue in WebPage.cpp

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: javafx
    • None
    • web

        Compilation Error in OS X after the committing the changeset for JDK-8161053
        /rt/modules/web/src/main/native/Source/WebCore/platform/java/WebPage.cpp:1359:5: error: use of undeclared identifier 'JSStringRelease'
        JSStringRelease(jsname);

              Assignee:
              Murali Billa
              Reporter:
              Murali Billa
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: