8161405: [OS X] Compilation Issue in WebPage.cpp

Reviewed-by: arajkumar, asrivastava